// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ProgressCircular /> spec > renders correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="progress"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="42"
    aria-valuetext="42%"
    class="flex flex-col justify-center gap-1 max-w-fit items-center"
    id="react-aria-:r0:"
    role="progressbar"
  >
    <div
      class="relative block"
    >
      <svg
        class="z-0 relative overflow-hidden text-info h-16 w-16"
        fill="none"
        stroke-width="2"
        viewBox="0 0 32 32"
      >
        <circle
          class="h-full stroke-default-50"
          cx="16"
          cy="16"
          r="14"
          role="presentation"
          stroke-dasharray="87.96459430051421 87.96459430051421"
          stroke-dashoffset="0"
          stroke-linecap="round"
          transform="rotate(-90 16 16)"
        />
        <circle
          class="h-full stroke-current transition-all !duration-500"
          cx="16"
          cy="16"
          r="14"
          role="presentation"
          stroke-dasharray="87.96459430051421 87.96459430051421"
          stroke-dashoffset="87.96459430051421"
          stroke-linecap="round"
          transform="rotate(-90 16 16)"
        />
      </svg>
      <span
        class="absolute font-normal inset-0 flex items-center justify-center text-md"
      >
        42%
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Story Snapshots > AllColors 1`] = `
<div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:rf:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          42%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:ri:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-default-400 h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          42%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:rl:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-primary h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          42%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:ro:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-secondary h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          42%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:rr:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-success h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          42%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:ru:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-warning h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          42%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r11:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-danger h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          42%
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > AllSizes 1`] = `
<div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r14:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-10 w-10"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-xs"
        >
          42%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r17:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-12 w-12"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-sm"
        >
          42%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r1a:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          42%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r1d:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-20 w-20"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-lg"
        >
          42%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r1g:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-24 w-24"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-xl"
        >
          42%
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    aria-label="progress"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="42"
    aria-valuetext="42%"
    class="flex flex-col justify-center gap-1 max-w-fit items-center"
    id="react-aria-:r6:"
    role="progressbar"
  >
    <div
      class="relative block"
    >
      <svg
        class="z-0 relative overflow-hidden text-info h-16 w-16"
        fill="none"
        stroke-width="2"
        viewBox="0 0 32 32"
      >
        <circle
          class="h-full stroke-default-50"
          cx="16"
          cy="16"
          r="14"
          role="presentation"
          stroke-dasharray="87.96459430051421 87.96459430051421"
          stroke-dashoffset="0"
          stroke-linecap="round"
          transform="rotate(-90 16 16)"
        />
        <circle
          class="h-full stroke-current transition-all !duration-500"
          cx="16"
          cy="16"
          r="14"
          role="presentation"
          stroke-dasharray="87.96459430051421 87.96459430051421"
          stroke-dashoffset="87.96459430051421"
          stroke-linecap="round"
          transform="rotate(-90 16 16)"
        />
      </svg>
      <span
        class="absolute font-normal inset-0 flex items-center justify-center text-md"
      >
        42%
      </span>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Finished 1`] = `
<div>
  <div
    aria-label="progress"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    aria-valuetext="[object Object]"
    class="flex flex-col justify-center gap-1 max-w-fit items-center"
    id="react-aria-:r9:"
    role="progressbar"
  >
    <div
      class="relative block"
    >
      <svg
        class="z-0 relative overflow-hidden text-info h-16 w-16"
        fill="none"
        stroke-width="2"
        viewBox="0 0 32 32"
      >
        <circle
          class="h-full stroke-default-50"
          cx="16"
          cy="16"
          r="14"
          role="presentation"
          stroke-dasharray="87.96459430051421 87.96459430051421"
          stroke-dashoffset="0"
          stroke-linecap="round"
          transform="rotate(-90 16 16)"
        />
        <circle
          class="h-full stroke-current transition-all !duration-500"
          cx="16"
          cy="16"
          r="14"
          role="presentation"
          stroke-dasharray="87.96459430051421 87.96459430051421"
          stroke-dashoffset="87.96459430051421"
          stroke-linecap="round"
          transform="rotate(-90 16 16)"
        />
      </svg>
      <span
        class="absolute font-normal inset-0 flex items-center justify-center text-md"
      >
        <svg
          class="text-success"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > HasError 1`] = `
<div>
  <div
    aria-label="progress"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="42"
    aria-valuetext="[object Object]"
    class="flex flex-col justify-center gap-1 max-w-fit items-center"
    id="react-aria-:rc:"
    role="progressbar"
  >
    <div
      class="relative block"
    >
      <svg
        class="z-0 relative overflow-hidden text-danger h-16 w-16"
        fill="none"
        stroke-width="2"
        viewBox="0 0 32 32"
      >
        <circle
          class="h-full stroke-default-50"
          cx="16"
          cy="16"
          r="14"
          role="presentation"
          stroke-dasharray="87.96459430051421 87.96459430051421"
          stroke-dashoffset="0"
          stroke-linecap="round"
          transform="rotate(-90 16 16)"
        />
        <circle
          class="h-full stroke-current transition-all !duration-500"
          cx="16"
          cy="16"
          r="14"
          role="presentation"
          stroke-dasharray="87.96459430051421 87.96459430051421"
          stroke-dashoffset="87.96459430051421"
          stroke-linecap="round"
          transform="rotate(-90 16 16)"
        />
      </svg>
      <span
        class="absolute font-normal inset-0 flex items-center justify-center text-md"
      >
        <svg
          class="text-danger"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 352 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > SomePercentages 1`] = `
<div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      aria-valuetext="0%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r1j:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          0%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="10"
      aria-valuetext="10%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r1m:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          10%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r1p:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          20%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      aria-valuetext="30%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r1s:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          30%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="40"
      aria-valuetext="40%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r1v:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          40%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      aria-valuetext="50%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r22:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          50%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="60"
      aria-valuetext="60%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r25:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          60%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="70"
      aria-valuetext="70%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r28:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          70%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="80"
      aria-valuetext="80%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r2b:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          80%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="90"
      aria-valuetext="90%"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r2e:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          90%
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      aria-valuetext="[object Object]"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r2h:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          <svg
            class="text-success"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      aria-valuetext="[object Object]"
      class="flex flex-col justify-center gap-1 max-w-fit items-center"
      id="react-aria-:r2k:"
      role="progressbar"
    >
      <div
        class="relative block"
      >
        <svg
          class="z-0 relative overflow-hidden text-info h-16 w-16"
          fill="none"
          stroke-width="2"
          viewBox="0 0 32 32"
        >
          <circle
            class="h-full stroke-default-50"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="0"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
          <circle
            class="h-full stroke-current transition-all !duration-500"
            cx="16"
            cy="16"
            r="14"
            role="presentation"
            stroke-dasharray="87.96459430051421 87.96459430051421"
            stroke-dashoffset="87.96459430051421"
            stroke-linecap="round"
            transform="rotate(-90 16 16)"
          />
        </svg>
        <span
          class="absolute font-normal inset-0 flex items-center justify-center text-md"
        >
          <svg
            class="text-success"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > WithoutPercentProp 1`] = `
<div>
  <div
    aria-label="progress"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    aria-valuetext="0%"
    class="flex flex-col justify-center gap-1 max-w-fit items-center"
    id="react-aria-:r2n:"
    role="progressbar"
  >
    <div
      class="relative block"
    >
      <svg
        class="z-0 relative overflow-hidden text-info h-16 w-16"
        fill="none"
        stroke-width="2"
        viewBox="0 0 32 32"
      >
        <circle
          class="h-full stroke-default-50"
          cx="16"
          cy="16"
          r="14"
          role="presentation"
          stroke-dasharray="87.96459430051421 87.96459430051421"
          stroke-dashoffset="0"
          stroke-linecap="round"
          transform="rotate(-90 16 16)"
        />
        <circle
          class="h-full stroke-current transition-all !duration-500"
          cx="16"
          cy="16"
          r="14"
          role="presentation"
          stroke-dasharray="87.96459430051421 87.96459430051421"
          stroke-dashoffset="87.96459430051421"
          stroke-linecap="round"
          transform="rotate(-90 16 16)"
        />
      </svg>
      <span
        class="absolute font-normal inset-0 flex items-center justify-center text-md"
      >
        0%
      </span>
    </div>
  </div>
</div>
`;
